--- a/blog_project/blog/templates/blogs/lista_posts.html
+++ b/blog_project/blog/templates/blogs/lista_posts.html
@@ -7,6 +7,14 @@
       <h3>{{ post.titulo }}</h3>
       <p>{{ post.contenido|linebreaks }}</p>
       <small>Publicado por {{ post.autor }} el {{ post.creado }}</small>
+      
+      {%if user == post.autor%}
+        <p>
+          <a href="{% url 'editar_post' post.id %}">Editar</a>
+          <a href="{% url 'eliminar_post' post.id %}">Eliminar</a>
+        </p>
+      {% endif %}
+
     </div>
     <hr>
   {% empty %}
