--- a/blog_project/blog/templates/blogs/lista_posts.html
+++ b/blog_project/blog/templates/blogs/lista_posts.html
@@ -12,6 +12,8 @@
         <p>
           <a href="{% url 'editar_post' post.id %}">Editar</a>
           <a href="{% url 'eliminar_post' post.id %}">Eliminar</a>
+          <a href="{% url 'detalle_post' post.pk %}">{{ post.titulo }}</a>
+
         </p>
       {% endif %}
 
